--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--Project: Web App Part 1-->
+<!--Rami Hollingsworth-->
+<!--Term 0112-->
+
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -11,8 +15,8 @@
 <body>
 	<h1>Electronics DataBase</h1>
 	<p>Track and list all the Electronics you have, will or want to own.</p>
+	<a href="additem.html">ADD TO LIST</a>
 </body>
-	
 </html>
 
 
