--- a/additem.html
+++ b/additem.html
@@ -29,12 +29,12 @@
 						<li><input type="radio" value="TV" id="tv" /><label for= "tv">T.V.</label></li>
 						<li><input type="radio" value="Phone" id="phone" /><label for= "phone">Phone</label></li>
 						<li><input type="radio" value="Other" id="other" /><label for= "other">Other</label></li>
-						<li><label for= "Notes">Notes</label><textarea rows="1" cols="20">Enter your notes here...</textarea>
-						<li><button type="submit"> Submit</button></li>	
+						<li><label for= "Notes">Notes</label><textarea rows="1" cols="20">Enter your notes here...</textarea>	
 					</ul>
 				</li>
-		</fieldset>
 		<a href="#">Clear Stored Data</a>
+		</fieldset>
+		<button type="submit"> Submit</button>
 </body>
 	
 </html>
