--- a/additem.html
+++ b/additem.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--Project: Web App Part 1-->
+<!--Project: Web App Part 2-->
 <!--Rami Hollingsworth-->
 <!--Term 0112-->
 <!--Radio buttons must have a name attribute. The value of the name attribute should be the same for each radio button that belongs to the same question. lines 31-35-->
@@ -14,6 +14,7 @@
 	<meta name= "robots" content= "index, follow" />
 	<meta name= "viewport" content= "user-scalable=no, width=device-width" />
 	<title>Electronics DataBase</title>
+	<link rel="stylesheet" href= "style.css" />
 </head>
 <body>
 	<h1>Electronics DataBase</h1>
