--- a/additem.html
+++ b/additem.html
@@ -17,11 +17,17 @@
 	<link rel="stylesheet" href= "style.css" />
 </head>
 <body>
-	<h1>Electronics DataBase</h1>
+	<header><h1>Electronics DataBase</h1></header>
+	<nav>
+		<a href="#" id="clear">Clear Stored Data</a>
+		<a href="#" id="displayLink">Display Data</a>
+		<a href="additem.html" id="addNewItem" style="display:none;">Add New Item</a>
+	</nav>
 	<form action= "#" method= "post">
 		<fieldset>
 		<legend>Add to Database</legend>
 			<ul>
+				<li id="selection"><label for="group">Add To Group:</label><br /></li>
 				<li><label for= "name">Name of Electronic</label><input type="text" id="name"></li>
 				<li><label for= "purchased">Purchase Date</label><input type="date" id="purchased"></li>
 				<li><label for= "rating">Rate it on a scale of 1 to 5:</label><input type= "range" min= "1" max= "5" id="rating"></li>
@@ -37,9 +43,11 @@
 					</ul>
 				</li>
 			</ul>
-		<a href="#">Clear Stored Data</a>
+		<a href="#" id="clear">Clear Stored Data</a>
+		<a href="#" id="displayLink">Display Data</a>
 		</fieldset>
 		<button type="submit"> Submit</button>
+		<script src="js/main.js" type="text/javascript"></script>
 </body>
 	
 </html>
