--- a/additem.html
+++ b/additem.html
@@ -27,7 +27,7 @@
 		<fieldset>
 		<legend>Add to Database</legend>
 			<ul>
-				<li id="selection"><label for="group">Add To Group:</label><br /></li>
+				<li id="select"><label for="groups">Add To Group:</label><br /></li>
 				<li><label for= "name">Name of Electronic</label><input type="text" id="name"></li>
 				<li><label for= "purchased">Purchase Date</label><input type="date" id="purchased"></li>
 				<li><label for= "rating">Rate it on a scale of 1 to 5:</label><input type= "range" min= "1" max= "5" id="rating"></li>
@@ -47,7 +47,7 @@
 		<a href="#" id="displayLink">Display Data</a>
 		</fieldset>
 		<button type="submit"> Submit</button>
-		<script src="js/main.js" type="text/javascript"></script>
+		<script src="main.js" type="text/javascript"></script>
 </body>
 	
 </html>
