still getting null error

--- a/additem.html
+++ b/additem.html
@@ -35,10 +35,10 @@
 			<ul>
 				<li>What type of Electronic:
 					<ul>
-						<li><input type="radio" checked value="Computer" id="computer" /><label for= "computer">Computer</label></li>
-						<li><input type="radio" value="TV" id="tv" /><label for= "tv">T.V.</label></li>
-						<li><input type="radio" value="Phone" id="phone" /><label for= "phone">Phone</label></li>
-						<li><input type="radio" value="Other" id="other" /><label for= "other">Other</label></li>
+						<li><input type="radio" checked value="Computer" id="computer" name="toe" /><label for= "computer">Computer</label></li>
+						<li><input type="radio" value="TV" id="tv" name="toe" /><label for= "tv">T.V.</label></li>
+						<li><input type="radio" value="Phone" id="phone" name="toe" /><label for= "phone">Phone</label></li>
+						<li><input type="radio" value="Other" id="other" name="toe" /><label for= "other">Other</label></li>
 						<li><label for= "notes">Notes</label><textarea rows="1" cols="20" id="notes">Enter your notes here...</textarea>	
 					</ul>
 				</li>
