--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 	<meta name= "robots" content= "index, follow" />
 	<meta name= "viewport" content= "user-scalable=no, width=device-width" />
 	<title>Electronics DataBase</title>
+	<link rel="stylesheet" href= "style.css" />
 </head>
 <body>
 	<h1>Electronics DataBase</h1>
 	<p>Track and list all the Electronics you have, will or want to own.</p>
-	<a href="additem.html">ADD TO LIST</a>
+	<button><a href="additem.html">ADD TO LIST</a></button>
 </body>
 </html>
 
