--- a/additem.html
+++ b/additem.html
@@ -47,6 +47,7 @@
 				</ul>
 			</div>
 		</fieldset>
+	</form>
 	<nav>
 		<button type="submit">Submit</button>
 		<a href="#" id="clear">Clear Stored Data</a>
