--- a/additem.html
+++ b/additem.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--Project: Web App Part 2-->
+<!--Project: Web App Part 3-->
 <!--Rami Hollingsworth-->
 <!--Term 0112-->
 
@@ -49,7 +49,7 @@
 		</fieldset>
 	</form>
 	<nav>
-		<button type="submit">Submit</button>
+		<button type="submit"id="submit">Submit</button>
 		<a href="#" id="clear">Clear Stored Data</a>
 		<a href="#" id="displayLink">Display Data</a></nav>
 		<script src="main.js" type="text/javascript"></script>
