Problem with radio button

--- a/additem.html
+++ b/additem.html
@@ -22,7 +22,7 @@
 	<nav>
 		<a href="additem.html" id="addNewItem" style="display:none;">Add New Item</a>
 	</nav>
-	<form action= "#" method= "post">
+	<form action= "#" method= "post" id= "contactForm">
 		<fieldset>
 		<legend>Add to Database</legend>
 			<div id= "items">
