--- a/additem.html
+++ b/additem.html
@@ -27,7 +27,8 @@
 		<fieldset>
 		<legend>Add to Database</legend>
 			<div id= "items">
-				<ul>
+				<ul id= "errors"></ul>
+				<ul id= "questions">
 					<li id="select"><label for="groups">Add To Group:</label><br /></li>
 					<li><label for= "name">Name of Electronic</label><input type="text" id="name"></li>
 					<li><label for= "purchased">Purchase Date</label><input type="date" id="purchased"></li>
