--- a/additem.html
+++ b/additem.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--Project: Web App Part 3-->
+<!--Project: Web App Part 4-->
 <!--Rami Hollingsworth-->
 <!--Term 0112-->
 
@@ -24,12 +24,12 @@
 		<a href="additem.html" id="addNewItem" style="display:none;">Add New Item</a>
 	</nav>
 	<form action= "#" method= "post" id= "contactForm">
-		<fieldset>
+		<fieldset id= "contactFieldset">
 		<legend>Add to Database</legend>
 			<div id= "items">
 				<ul id= "errors"></ul>
 				<ul id= "questions">
-					<li id="select"><label for="groups">Add To Group:</label><br /></li>
+					<li id="select"><label for="group">Add To Group:</label><br /></li>
 					<li><label for= "name">Name of Electronic</label><input type="text" id="name"></li>
 					<li><label for= "purchased">Purchase Date</label><input type="date" id="purchased"></li>
 					<li><label for= "rating">Rate it on a scale of 1 to 5:</label><input type= "range" min= "1" max= "5" id="rating"></li>
@@ -37,9 +37,7 @@
 				<ul>
 					<li>What type of Electronic:
 						<ul>
-							<li><input type="radio" checked value="Computer" id="computer" name="toe" /><label for= "computer">Computer</label></li>
-							<li><input type="radio" value="TV" id="tv" name="toe" /><label for= "tv">T.V.</label></li>
-							<li><input type="radio" value="Phone" id="phone" name="toe" /><label for= "phone">Phone</label></li>
+							<li><input type="radio" checked value="Phone" id="phone" name="toe" /><label for= "phone">Phone</label></li>
 							<li><input type="radio" value="Other" id="other" name="toe" /><label for= "other">Other</label><br /></li>
 						</ul>
 						<ul>
@@ -49,12 +47,13 @@
 				</ul>
 			</div>
 		</fieldset>
-	</form>
+		</form>
 	<nav>
 		<button type="submit"id="submit">Submit</button>
 		<a href="#" id="clear">Clear Stored Data</a>
 		<a href="#" id="displayLink">Display Data</a></nav>
-		<script src="main.js" type="text/javascript"></script>
+		<script src="json.js" type="text/javascript"></script>
+		<script src="main1.js" type="text/javascript"></script>
 </body>
 	
 </html>
