--- a/additem.html
+++ b/additem.html
@@ -53,7 +53,7 @@
 		<a href="#" id="clear">Clear Stored Data</a>
 		<a href="#" id="displayLink">Display Data</a></nav>
 		<script src="json.js" type="text/javascript"></script>
-		<script src="main1.js" type="text/javascript"></script>
+		<script src="main.js" type="text/javascript"></script>
 </body>
 	
 </html>
